--- a/Sprint 1/Exercici 1/Exercici1.html
+++ b/Sprint 1/Exercici 1/Exercici1.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="container containerRow">
+    <div class="container" id="container2">
         <div class="section" id="section3">
             <div class="element element3-1234">
             </div>
