--- a/Sprint 1/Sprint1.html
+++ b/Sprint 1/Sprint1.html
@@ -5,22 +5,33 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="estils.css" media="all" rel="Stylesheet" type="text/css" /> 
+    <script src="https://kit.fontawesome.com/298266a7e0.js" crossorigin="anonymous"></script>
 	<title>Exercici 1</title>
 </head>
 
 <body>
 
-	<div class="container containerColumn">
+	<div class="container containerColumn" id="container1">
         <div class="section" id="section1">
             <div class="element" id="element1">
+                <img src="img/Material activitat Flex nivell 2-logo.png" alt="temple logo" id="logo">
             </div>
             <div class="element" id="element2">
+                <ul id="nav">
+                    <li><i class="fas fa-home"></i> <a href="#">Inicio</a></li>
+                    <li><i class="fas fa-map-marked-alt"></i> <a href="#">Rutas</a></li>
+                    <li><i class="fas fa-h-square"></i> <a href="#">Hoteles</a></li>
+                    <li><i class="fas fa-plane"></i> <a href="#">Vuelos</a></li>
+                    <li><i class="fas fa-envelope"></i> <a href="#">Contacto</a></li>
+                </ul>
             </div>
             <div class="element "id="element3">
+                <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter"></i>
             </div>
         </div>
         <div class="section" id="section2">
-            <div class="element element100">
+            <div class="element element100" id="element4">
+                <h1>"Disfruta de la experiencia de otros viajeros"</h1>
             </div>
         </div>
     </div>
