--- a/Sprint 1/Sprint1.html
+++ b/Sprint 1/Sprint1.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="element "id="element3">
-                <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter"></i>
+                <a href="#"><i class="fab fa-facebook-square"></i></a> <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
         <div class="section" id="section2">
@@ -39,26 +39,75 @@
     <div class="container" id="container2">
         <div class="section" id="section3">
             <div class="element element3-1234">
+                <img src="img/spring.jpg" alt="spring blossoms">
+                <div class="subtitles">
+                <h2>CULTURA</h2>
+                </div>
+                <div class="articles">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consequat pellentesque finibus. Nam vulputate non erat ac tincidunt. Cras faucibus, elit ac dapibus blandit, sapien ligula dignissim massa, a euismod ipsum risus vel ex.</p>
+                    <p>Maecenas hendrerit pretium tortor a elementum. Donec eleifend vehicula dui, vitae sagittis urna viverra ut. Nulla finibus arcu ex, sed feugiat ante consectetur eget. Pellentesque at libero justo. Vestibulum nec dui quis orci hendrerit sagittis a non risus.</p>
+                </div>
+                <div class="leermas articles">
+                    <a href="#">Leer mas...</a>
+                </div>
             </div>
             <div class="element element3-1234">
+                <img src="img/food.jpg" alt="japan food">
+                <div class="subtitles">
+                <h2>GASTRONOMÍA</h2>
+                </div>
+                <div class="articles">
+                    <p>Donec luctus et ex et feugiat. Mauris a lacus a quam semper accumsan. Donec eros leo, tempus id diam ac, luctus volutpat diam. Sed at tellus sed lectus auctor pretium et vitae libero.</p>
+                    <p>Ut placerat viverra lorem a dignissim. Morbi ac orci sed risus molestie vehicula. Duis interdum tincidunt justo, at eleifend massa luctus nec. Curabitur luctus sollicitudin eleifend.</p>
+                </div>
+                <div class="leermas articles">
+                    <a href="#">Leer mas...</a>
+                </div>
             </div>
             <div class="element element3-1234">
+                <img src="img/mt-fuji.jpg" alt="mount fuji">
+                <div class="subtitles">
+                <h2>TURISMO</h2>
+                </div>
+                <div class="articles">
+                    <p>Suspendisse vehicula massa eros, eu accumsan sapien hendrerit a. Quisque eleifend porttitor laoreet. Maecenas ut finibus erat. Integer sit amet risus quis mi dignissim viverra et nec risus. Donec ac dui interdum, ullamcorper arcu nec, consequat lacus.</p>
+                    <p>Donec eu est pellentesque, pharetra felis vel, sollicitudin arcu. Proin ac neque in est aliquam consectetur. Phasellus laoreet lectus neque, ac varius turpis pretium id.  Proin lobortis semper viverra.</p>
+                </div>
+                <div class="leermas articles">
+                    <a href="#">Leer mas...</a>
+                </div>
             </div>
             <div class="element element3-1234">
+                <img src="img/night-life.jpg" alt="japan night street">
+                <div class="subtitles">
+                <h2>VIDA NOCTURNA</h2>
+                </div>
+                <div class="articles">
+                    <p>Duis facilisis egestas nulla, nec vulputate nisl vehicula quis. Sed elementum consequat felis, eget tempus ipsum ornare id. Praesent erat nibh, lobortis a libero sed, mollis consectetur lacus. Donec gravida est non magna luctus pulvinar.</p>
+                    <p>Ut vehicula, libero eget iaculis varius, diam quam convallis nisi, vel accumsan lectus ipsum eget quam. Donec blandit rhoncus malesuada. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur at orci lacus.</p>
+                </div>
+                <div class="leermas articles">
+                    <a href="#">Leer mas...</a>
+                </div>
             </div><br>
-            <div class="element element100" id=element3-5>
+            <div class="element element100 articles" id=element3-5>
+                <p>Suspendisse vehicula massa eros, eu accumsan sapien hendrerit a. Quisque eleifend porttitor laoreet. Maecenas ut finibus erat. Integer sit amet risus quis mi dignissim viverra et nec risus.</p>
             </div>
         </div>
         <div class="section" id="section4">
             <div class="element">
+                <h3>Something</h3>
             </div>
-            <div class="element">
+            <div class="articles">
+                <p>Donec ac dui interdum, ullamcorper arcu nec, consequat lacus. Donec eu est pellentesque, pharetra felis vel, sollicitudin arcu. Proin ac neque in est aliquam consectetur. Phasellus laoreet lectus neque, ac varius turpis pretium id. Proin lobortis semper viverra.</p>
+                
             </div>
         </div>
     </div>
 
     <div class="container containerColumn">
         <div class="section" id="section5">
+            <p>© Japan Tourism</p>
         </div>
     </div>
 
