--- a/Sprint 1/Sprint1.html
+++ b/Sprint 1/Sprint1.html
@@ -18,11 +18,11 @@
             </div>
             <div class="element" id="element2">
                 <ul id="nav">
-                    <li><i class="fas fa-home"></i> <a href="#">Inicio</a></li>
-                    <li><i class="fas fa-map-marked-alt"></i> <a href="#">Rutas</a></li>
-                    <li><i class="fas fa-h-square"></i> <a href="#">Hoteles</a></li>
-                    <li><i class="fas fa-plane"></i> <a href="#">Vuelos</a></li>
-                    <li><i class="fas fa-envelope"></i> <a href="#">Contacto</a></li>
+                    <li class="aparecer1"><i class="fas fa-home"></i> <a href="#">Inicio</a></li>
+                    <li class="aparecer2"><i class="fas fa-map-marked-alt"></i> <a href="#">Rutas</a></li>
+                    <li class="aparecer1"><i class="fas fa-h-square"></i> <a href="#">Hoteles</a></li>
+                    <li class="aparecer2"><i class="fas fa-plane"></i> <a href="#">Vuelos</a></li>
+                    <li class="aparecer1"><i class="fas fa-envelope"></i> <a href="#">Contacto</a></li>
                 </ul>
             </div>
             <div class="element "id="element3">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="section" id="section2">
-            <div class="element element100" id="element4">
+            <div class="element element100 aparecer2" id="element4">
                 <h1>"Disfruta de la experiencia de otros viajeros"</h1>
             </div>
         </div>
