--- a/Sprint 1/Sprint1.html
+++ b/Sprint 1/Sprint1.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="estils.css" media="all" rel="Stylesheet" type="text/css" />
-    <script
-      src="https://kit.fontawesome.com/298266a7e0.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Exercici 1</title>
-  </head>
 
-  <body>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link href="estils.css" media="all" rel="Stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/298266a7e0.js" crossorigin="anonymous"></script>
+  <title>Exercici 1</title>
+</head>
+
+<body>
+  <div class="pageContainer">
     <div class="container containerColumn" id="container1">
       <div class="section" id="section1">
         <div class="element" id="element1">
-          <img
-            src="img/Material activitat Flex nivell 2-logo.png"
-            alt="temple logo"
-            id="logo"
-          />
+          <img src="img/Material activitat Flex nivell 2-logo.png" alt="temple logo" id="logo" />
         </div>
         <div class="element" id="element2">
           <ul id="nav">
@@ -46,133 +41,126 @@
         </div>
       </div>
       <div class="section" id="section2">
-        <div class="element element100 aparecer2" id="element4">
+        <div class="element aparecer2" id="element4">
           <h1>"Disfruta de la experiencia de otros viajeros"</h1>
         </div>
       </div>
     </div>
-
+<div id="main">
     <div class="container" id="container2">
-      <div class="section" id="section3">
-        <div class="element element3-1234">
-          <img src="img/spring.jpg" alt="spring blossoms" />
-          <div class="subtitles">
-            <h2>CULTURA</h2>
-          </div>
-          <div class="articles">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Suspendisse consequat pellentesque finibus. Nam vulputate non erat
-              ac tincidunt. Cras faucibus, elit ac dapibus blandit, sapien
-              ligula dignissim massa, a euismod ipsum risus vel ex.
-            </p>
-            <p>
-              Maecenas hendrerit pretium tortor a elementum. Donec eleifend
-              vehicula dui, vitae sagittis urna viverra ut. Nulla finibus arcu
-              ex, sed feugiat ante consectetur eget. Pellentesque at libero
-              justo. Vestibulum nec dui quis orci hendrerit sagittis a non
-              risus.
-            </p>
-          </div>
-          <div class="leermas articles">
-            <a href="#">Leer mas...</a>
-          </div>
+      <div class="element element3-1234" id="element3-1">
+        <div><img src="img/spring.jpg" alt="spring blossoms" /></div>
+        <div class="subtitles">
+          <h2>CULTURA</h2>
         </div>
-        <div class="element element3-1234">
-          <img src="img/food.jpg" alt="japan food" />
-          <div class="subtitles">
-            <h2>GASTRONOMÍA</h2>
-          </div>
-          <div class="articles">
-            <p>
-              Donec luctus et ex et feugiat. Mauris a lacus a quam semper
-              accumsan. Donec eros leo, tempus id diam ac, luctus volutpat diam.
-              Sed at tellus sed lectus auctor pretium et vitae libero.
-            </p>
-            <p>
-              Ut placerat viverra lorem a dignissim. Morbi ac orci sed risus
-              molestie vehicula. Duis interdum tincidunt justo, at eleifend
-              massa luctus nec. Curabitur luctus sollicitudin eleifend.
-            </p>
-          </div>
-          <div class="leermas articles">
-            <a href="#">Leer mas...</a>
-          </div>
+        <div class="articles">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Suspendisse consequat pellentesque finibus. Nam vulputate non erat
+            ac tincidunt. Cras faucibus, elit ac dapibus blandit, sapien
+            ligula dignissim massa, a euismod ipsum risus vel ex.
+          </p>
+          <p>
+            Maecenas hendrerit pretium tortor a elementum. Donec eleifend
+            vehicula dui, vitae sagittis urna viverra ut. Nulla finibus arcu
+            ex, sed feugiat ante consectetur eget. Pellentesque at libero
+            justo. Vestibulum nec dui quis orci hendrerit sagittis a non
+            risus.
+          </p>
         </div>
-        <div class="element element3-1234">
-          <img src="img/mt-fuji.jpg" alt="mount fuji" />
-          <div class="subtitles">
-            <h2>TURISMO</h2>
-          </div>
-          <div class="articles">
-            <p>
-              Suspendisse vehicula massa eros, eu accumsan sapien hendrerit a.
-              Quisque eleifend porttitor laoreet. Maecenas ut finibus erat.
-              Integer sit amet risus quis mi dignissim viverra et nec risus.
-              Donec ac dui interdum, ullamcorper arcu nec, consequat lacus.
-            </p>
-            <p>
-              Donec eu est pellentesque, pharetra felis vel, sollicitudin arcu.
-              Proin ac neque in est aliquam consectetur. Phasellus laoreet
-              lectus neque, ac varius turpis pretium id. Proin lobortis semper
-              viverra.
-            </p>
-          </div>
-          <div class="leermas articles">
-            <a href="#">Leer mas...</a>
-          </div>
+        <div class="leermas articles">
+          <a href="#">Leer mas...</a>
         </div>
-        <div class="element element3-1234">
-          <img src="img/night-life.jpg" alt="japan night street" />
-          <div class="subtitles">
-            <h2>VIDA NOCTURNA</h2>
-          </div>
-          <div class="articles">
-            <p>
-              Duis facilisis egestas nulla, nec vulputate nisl vehicula quis.
-              Sed elementum consequat felis, eget tempus ipsum ornare id.
-              Praesent erat nibh, lobortis a libero sed, mollis consectetur
-              lacus. Donec gravida est non magna luctus pulvinar.
-            </p>
-            <p>
-              Ut vehicula, libero eget iaculis varius, diam quam convallis nisi,
-              vel accumsan lectus ipsum eget quam. Donec blandit rhoncus
-              malesuada. Interdum et malesuada fames ac ante ipsum primis in
-              faucibus. Curabitur at orci lacus.
-            </p>
-          </div>
-          <div class="leermas articles">
-            <a href="#">Leer mas...</a>
-          </div>
+      </div>
+      <div class="element element3-1234" id="element3-2">
+        <div><img src="img/food.jpg" alt="japan food" /></div>
+        <div class="subtitles">
+          <h2>GASTRONOMÍA</h2>
         </div>
-        <br />
-        <div class="element element100 articles" id="element3-5">
+        <div class="articles">
+          <p>
+            Donec luctus et ex et feugiat. Mauris a lacus a quam semper
+            accumsan. Donec eros leo, tempus id diam ac, luctus volutpat diam.
+            Sed at tellus sed lectus auctor pretium et vitae libero.
+          </p>
+          <p>
+            Ut placerat viverra lorem a dignissim. Morbi ac orci sed risus
+            molestie vehicula. Duis interdum tincidunt justo, at eleifend
+            massa luctus nec. Curabitur luctus sollicitudin eleifend.
+          </p>
+        </div>
+        <div class="leermas articles">
+          <a href="#">Leer mas...</a>
+        </div>
+      </div>
+      <div class="element element3-1234" id="element3-3">
+        <div><img src="img/mt-fuji.jpg" alt="mount fuji" /></div>
+        <div class="subtitles">
+          <h2>TURISMO</h2>
+        </div>
+        <div class="articles">
           <p>
             Suspendisse vehicula massa eros, eu accumsan sapien hendrerit a.
             Quisque eleifend porttitor laoreet. Maecenas ut finibus erat.
             Integer sit amet risus quis mi dignissim viverra et nec risus.
+            Donec ac dui interdum, ullamcorper arcu nec, consequat lacus.
+          </p>
+          <p>
+            Donec eu est pellentesque, pharetra felis vel, sollicitudin arcu.
+            Proin ac neque in est aliquam consectetur. Phasellus laoreet
+            lectus neque, ac varius turpis pretium id. Proin lobortis semper
+            viverra.
           </p>
         </div>
+        <div class="leermas articles">
+          <a href="#">Leer mas...</a>
+        </div>
       </div>
-      <div class="section" id="section4">
-        <div class="element">
-          <h3>Something</h3>
+      <div class="element element3-1234" id="element3-4">
+        <div><img src="img/night-life.jpg" alt="japan night street" /></div>
+        <div class="subtitles">
+          <h2>VIDA NOCTURNA</h2>
         </div>
         <div class="articles">
           <p>
-            Donec ac dui interdum, ullamcorper arcu nec, consequat lacus. Donec
-            eu est pellentesque, pharetra felis vel, sollicitudin arcu. Proin ac
-            neque in est aliquam consectetur. Phasellus laoreet lectus neque, ac
-            varius turpis pretium id. Proin lobortis semper viverra.
+            Duis facilisis egestas nulla, nec vulputate nisl vehicula quis.
+            Sed elementum consequat felis, eget tempus ipsum ornare id.
+            Praesent erat nibh, lobortis a libero sed, mollis consectetur
+            lacus. Donec gravida est non magna luctus pulvinar.
+          </p>
+          <p>
+            Ut vehicula, libero eget iaculis varius, diam quam convallis nisi,
+            vel accumsan lectus ipsum eget quam. Donec blandit rhoncus
+            malesuada. Interdum et malesuada fames ac ante ipsum primis in
+            faucibus. Curabitur at orci lacus.
           </p>
         </div>
+        <div class="leermas articles">
+          <a href="#">Leer mas...</a>
+        </div>
+      </div>
+      <div class="element articles" id="element3-5">
+        <p>
+          Suspendisse vehicula massa eros, eu accumsan sapien hendrerit a.
+          Quisque eleifend porttitor laoreet. Maecenas ut finibus erat.
+          Integer sit amet risus quis mi dignissim viverra et nec risus.
+        </p>
       </div>
     </div>
+    <div id="something">
+      <h3>Something</h3>
+      <p>
+        Donec ac dui interdum, ullamcorper arcu nec, consequat lacus. Donec
+        eu est pellentesque, pharetra felis vel, sollicitudin arcu. Proin ac
+        neque in est aliquam consectetur. Phasellus laoreet lectus neque, ac
+        varius turpis pretium id. Proin lobortis semper viverra.
+      </p>
+    </div>
+    </div>
+    <div class="container section" id="section5">
+      <p>© Japan Tourism</p>
+    </div>
+  </div>
+</body>
 
-    <div class="container containerColumn">
-      <div class="section" id="section5">
-        <p>© Japan Tourism</p>
-      </div>
-    </div>
-  </body>
 </html>
