--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -49,20 +49,221 @@
                 </div>
                 <div class="row p-1 pb-3 justify-content-around justify-content-lg-start">
                     <div class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center">
-                        <a type="button" class="btn btn-primary my-2" href="#">Get it on Chrome</a>
-                    </div>
-                    <div class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center">
-                        <a type="button" class="btn btn-light my-2" href="#">Get it on Firefox</a>
-                    </div>
-                </div>
+                        <a type="button" class="btn btn-primary my-2" href="#">Get it on Chrome</a
+                >
+              </div>
+              <div
+                class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
+              >
+                <a type="button" class="btn btn-light my-2" href="#"
+                  >Get it on Firefox</a
+                >
+              </div>
             </div>
-            <div class="order-1 col-lg-6 py-lg-5 col-md-8 mx-auto">
-                <img width="100%" height="100%" src="img/illustration-hero.svg" alt="tablet screen application" />
-            </div>
+          
         </div>
+        <div class="order-1 col-lg-6 py-lg-5 col-md-8 mx-auto">
+          <img
+            width="100%"
+            height="100%"
+            src="img/illustration-hero.svg"
+            alt="tablet screen application"
+          />
+        </div>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-</body>
+    <!--Ejercicio 2-->
+    <div class="container">
+      <section class="container text-center pb-5 row">
+        <div class="container col-10 col-md-6">
+          <h2 class="display-5 fw-bold">Features</h1>
+          <p class="lead">Our aim is to make it quick and easy for you to access your favourite websites.
+             Your bookmarks sync between your devices so you can access them on the go.</p>
+                 </div>
+      </section>
+      <ul
+        class="nav nav-pills justify-content-center row"
+        role="tablist"
+      >
+        <li class="nav-item col-7 col-md-3" role="presentation">
+          <button
+            class="nav-link active bg-white text-dark m-auto"
+            data-bs-toggle="tab"
+            data-bs-target="#simple"
+            aria-controls="simple"
+          >
+            Simple Bookmarking
+          </button>
+        </li>
+        <li class="nav-item col-7 col-md-3" role="presentation">
+          <button
+            class="nav-link bg-white text-dark m-auto"
+            data-bs-toggle="tab"
+            data-bs-target="#speedy"
+            aria-controls="speedy"
+          >
+            Speedy Searching
+          </button>
+        </li>
+        <li class="nav-item col-7 col-md-3" role="presentation">
+          <button
+            class="nav-link bg-white text-dark m-auto"
+            data-bs-toggle="tab"
+            data-bs-target="#easy"
+            aria-controls="easy"
+          >
+            Easy Sharing
+          </button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div
+          class="tab-pane fade show active"
+          id="simple"
+          role="tabpanel"
+          aria-labelledby="simple-tab"
+        >
+          <!--Contenido Primer Tab-->
+          <div class="py-5 container">
+            <div class="row">
+              <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
+                <div class="container text-center text-lg-start">
+                  <div class="row my-2">
+                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                  </div>
+                  <div class="row mb-sm-3">
+                    <p class="lead">
+                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
+                      gives you complete control over how you manage your favourite sites.
+                    </p>
+                  </div>
 
+                  <div
+                    class="row p-1 pb-3 justify-content-around justify-content-lg-start"
+                  >
+                    <div
+                      class="col-7 col-sm-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
+                    >
+                      <a type="button" class="btn btn-primary my-2" href="#"
+                        >More Info</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="order-1 col-lg-5 py-lg-4 col-md-7 mx-auto">
+                <img
+                  width="100%"
+                  height="100%"
+                  src="img/illustration-features-tab-1.svg"
+                  alt="tablet screen application"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="speedy"
+          role="tabpanel"
+          aria-labelledby="speedy-tab"
+        >
+          <!--Contenido Segundo Tab-->
+          <div class="py-5 container">
+            <div class="row">
+              <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
+                <div class="container text-center text-lg-start">
+                  <div class="row my-2">
+                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                  </div>
+                  <div class="row mb-sm-3">
+                    <p class="lead">
+                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
+                      gives you complete control over how you manage your favourite sites.
+                    </p>
+                  </div>
+
+                  <div
+                    class="row p-1 pb-3 justify-content-around justify-content-lg-start"
+                  >
+                    <div
+                      class="col-7 col-sm-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
+                    >
+                      <a type="button" class="btn btn-primary my-2" href="#"
+                        >More Info</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="order-1 col-lg-5 py-lg-4 col-md-7 mx-auto">
+                <img
+                  width="100%"
+                  height="100%"
+                  src="img/illustration-features-tab-2.svg"
+                  alt="tablet screen application"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="easy"
+          role="tabpanel"
+          aria-labelledby="easy-tab"
+        >
+          <!--Contenido Tercer Tab-->
+          <div class="py-5 container">
+            <div class="row">
+              <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
+                <div class="container text-center text-lg-start">
+                  <div class="row my-2">
+                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                  </div>
+                  <div class="row mb-sm-3">
+                    <p class="lead">
+                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
+                      gives you complete control over how you manage your favourite sites.
+                    </p>
+                  </div>
+
+                  <div
+                    class="row p-1 pb-3 justify-content-around justify-content-lg-start"
+                  >
+                    <div
+                      class="col-7 col-sm-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
+                    >
+                      <a type="button" class="btn btn-primary my-2" href="#"
+                        >More Info</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="order-1 col-lg-5 py-lg-4 col-md-7 mx-auto">
+                <img
+                  width="100%"
+                  height="100%"
+                  src="img/illustration-features-tab-3.svg"
+                  alt="tablet screen application"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+        <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
