--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="sass/main.css" media="all" rel="Stylesheet" type="text/css" />
     <link href="css/main.css" media="all" rel="Stylesheet" type="text/css" />
     <link href="css/estils.css" media="all" rel="Stylesheet" type="text/css" />
     <title>Sprint 2</title>
@@ -40,7 +41,7 @@
         <div class="row align-items-center">
             <div class="order-2 order-sm-0 col-lg-6 py-md-4 py-2 text-center text-lg-start">
                 <div class="my-2">
-                    <h2 class="display-6 fw-bold">A Simple Bookmark Manager</h2>
+                    <h1 class="display-6 fw-bold">A Simple Bookmark Manager</h1>
                 </div>
                 <div class="mb-sm-3">
                     <p class="lead">
@@ -50,17 +51,16 @@
                 <div class="row p-1 pb-3 justify-content-around justify-content-lg-start">
                     <div class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center">
                         <a type="button" class="btn btn-primary my-2" href="#">Get it on Chrome</a
-                >
-              </div>
-              <div
-                class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
               >
-                <a type="button" class="btn btn-light my-2" href="#"
-                  >Get it on Firefox</a
-                >
-              </div>
             </div>
-          
+            <div
+              class="col-6 col-xl-4 p-sm-0 d-inline-flex justify-content-center"
+            >
+              <a type="button" class="btn btn-light my-2" href="#"
+                >Get it on Firefox</a
+              >
+            </div>
+          </div>
         </div>
         <div class="order-1 col-lg-6 py-lg-5 col-md-8 mx-auto">
           <img
@@ -76,15 +76,15 @@
     <div class="container">
       <section class="container text-center pb-5 row">
         <div class="container col-10 col-md-6">
-          <h2 class="display-5 fw-bold">Features</h1>
-          <p class="lead">Our aim is to make it quick and easy for you to access your favourite websites.
-             Your bookmarks sync between your devices so you can access them on the go.</p>
-                 </div>
+          <h2 class="display-5 fw-bold">Features</h2>
+          <p class="lead">
+            Our aim is to make it quick and easy for you to access your
+            favourite websites. Your bookmarks sync between your devices so you
+            can access them on the go.
+          </p>
+        </div>
       </section>
-      <ul
-        class="nav nav-pills justify-content-center row"
-        role="tablist"
-      >
+      <ul class="nav nav-pills justify-content-center row" role="tablist">
         <li class="nav-item col-7 col-md-3" role="presentation">
           <button
             class="nav-link active bg-white text-dark m-auto"
@@ -129,12 +129,13 @@
               <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
                 <div class="container text-center text-lg-start">
                   <div class="row my-2">
-                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                    <h3 class="display-6 fw-bold">Bookmark in One Click</h3>
                   </div>
                   <div class="row mb-sm-3">
                     <p class="lead">
-                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
-                      gives you complete control over how you manage your favourite sites.
+                      Optimize your bookmarks however you like. Our simple
+                      drag-and-drop interface gives you complete control over
+                      how you manage your favourite sites.
                     </p>
                   </div>
 
@@ -174,12 +175,13 @@
               <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
                 <div class="container text-center text-lg-start">
                   <div class="row my-2">
-                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                    <h3 class="display-6 fw-bold">Bookmark in One Click</h3>
                   </div>
                   <div class="row mb-sm-3">
                     <p class="lead">
-                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
-                      gives you complete control over how you manage your favourite sites.
+                      Optimize your bookmarks however you like. Our simple
+                      drag-and-drop interface gives you complete control over
+                      how you manage your favourite sites.
                     </p>
                   </div>
 
@@ -219,12 +221,13 @@
               <div class="order-lg-2 order-0 col-lg-6 py-lg-5 col-md-8 mx-auto">
                 <div class="container text-center text-lg-start">
                   <div class="row my-2">
-                    <h2 class="display-6 fw-bold">Bookmark in One Click</h2>
+                    <h3 class="display-6 fw-bold">Bookmark in One Click</h3>
                   </div>
                   <div class="row mb-sm-3">
                     <p class="lead">
-                      Optimize your bookmarks however you like. Our simple drag-and-drop interface
-                      gives you complete control over how you manage your favourite sites.
+                      Optimize your bookmarks however you like. Our simple
+                      drag-and-drop interface gives you complete control over
+                      how you manage your favourite sites.
                     </p>
                   </div>
 
@@ -252,18 +255,77 @@
             </div>
           </div>
         </div>
-        </div>
       </div>
     </div>
-        <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <!--Ejercicio 3-->
+    <div class="container py-3">
+      <section class="container text-center row">
+        <div class="container col-10 col-md-6">
+          <h2 class="display-7">Download the extension</h2>
+          <p class="lead">
+            We got more browsers in the pipeline Plase let us know if you got a
+            favourite one you'd like us to prioritize.
+          </p>
+        </div>
+      </section>
+      <!--Cards-->
+      <div class="container">
+      <section class="row text-center justify-content-center" style="min-height:450px">
+        <!--Card 1 Google Chrome-->
+        <div class="card p-0 col-4 mx-3 align-self-start my-3 shadow" style="width: 16rem">
+          <div class="w-50 mx-auto p-3">
+            <img
+              class="card-img-top pt-4"
+              src="img/logo-chrome.svg"
+              alt="logo google chrome"
+            />
+          </div>
+          <div class="card-body px-0 pb-0 pt-3">
+            <h4 class="card-title ">Add to Chrome</h4>
+            <p class="card-text text-muted">Minimum version 62</p>
+            <img
+              class="w-100"
+              src="img/bg-dots.svg"
+              alt="dotted line"
+            />
+          </div>
+          <div class="card-footer p-3">
+            <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+                <!--Card 2 Mozilla Firefox-->
+                <div class="card p-0 col-4 mx-3 align-self-center my-3 shadow" style="width: 16rem">
+                    <div class="w-50 mx-auto p-3">
+                        <img class="card-img-top pt-4" src="img/logo-firefox.svg" alt="logo google chrome" />
+                    </div>
+                    <div class="card-body px-0 pb-0 pt-3">
+                        <h4 class="card-title ">Add to Firefox</h4>
+                        <p class="card-text text-muted">Minimum version 55</p>
+                        <img class="w-100" src="img/bg-dots.svg" alt="dotted line" />
+                    </div>
+                    <div class="card-footer p-3">
+                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+                <!--Card 2 Opera-->
+                <div class="card p-0 col-4 mx-3 align-self-end my-3 shadow" style="width: 16rem">
+                    <div class="w-50 mx-auto p-3">
+                        <img class="card-img-top pt-4" src="img/logo-opera.svg" alt="logo google chrome" />
+                    </div>
+                    <div class="card-body px-0 pb-0 pt-3">
+                        <h4 class="card-title ">Add to Opera</h4>
+                        <p class="card-text text-muted">Minimum version 46</p>
+                        <img class="w-100" src="img/bg-dots.svg" alt="dotted line" />
+                    </div>
+                    <div class="card-footer p-3">
+                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                    </div>
+                </div>
+                </section>
+            </div>
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</body>
+
 </html>
