--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="sass/main.css" media="all" rel="Stylesheet" type="text/css" />
     <link href="css/main.css" media="all" rel="Stylesheet" type="text/css" />
     <link href="css/estils.css" media="all" rel="Stylesheet" type="text/css" />
     <title>Sprint 2</title>
@@ -194,7 +195,7 @@
                         <img class="card-img-top pt-4" src="img/logo-chrome.svg" alt="logo google chrome" />
                     </div>
                     <div class="card-body px-0 pb-0 pt-3">
-                        <h4 class="card-title ">Add to Chrome</h4>
+                        <h4 class="card-title">Add to Chrome</h4>
                         <p class="card-text text-muted">Minimum version 62</p>
                         <img class="w-100" src="img/bg-dots.svg" alt="dotted line" />
                     </div>
@@ -208,7 +209,7 @@
                         <img class="card-img-top pt-4" src="img/logo-firefox.svg" alt="logo google chrome" />
                     </div>
                     <div class="card-body px-0 pb-0 pt-3">
-                        <h4 class="card-title ">Add to Firefox</h4>
+                        <h4 class="card-title">Add to Firefox</h4>
                         <p class="card-text text-muted">Minimum version 55</p>
                         <img class="w-100" src="img/bg-dots.svg" alt="dotted line" />
                     </div>
@@ -222,7 +223,7 @@
                         <img class="card-img-top pt-4" src="img/logo-opera.svg" alt="logo google chrome" />
                     </div>
                     <div class="card-body px-0 pb-0 pt-3">
-                        <h4 class="card-title ">Add to Opera</h4>
+                        <h4 class="card-title">Add to Opera</h4>
                         <p class="card-text text-muted">Minimum version 46</p>
                         <img class="w-100" src="img/bg-dots.svg" alt="dotted line" />
                     </div>
@@ -234,7 +235,7 @@
         </div>
     </div>
     <!--Ejercicio 4-->
-    <div class="container py-4 text-center mx-auto ">
+    <div class="container py-4 text-center mx-auto">
         <section class="container col-10 col-md-8 col-lg-6 text-center mx-auto row">
             <div class="container col">
                 <h2 class="display-7">Frequently Asked Questions</h2>
@@ -295,8 +296,51 @@
         </section>
         <div class="py-3"><a href="#" class="btn btn-primary">More Info</a></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!--Ejercicio 5-->
+    <footer>
+        <div class="bg-primary text-center text-light row w-100 m-0">
+            <div class="container p-5 col-10 col-lg-6">
+                <p class="lead fw-bold">
+                    35.000+ ALREADY JOINED
+                </p>
+                <h3 class="m-4"> Stay up-to-date with what we're doing
+                </h3>
+                <form class="container row justify-content-center was-validated">
+                    <div class="col-auto">
+                        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter you email address" required>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-secondary text-light mt-3 mt-sm-0">Contact Us</button>
+                    </div>
+                </form>
+            </div>
+            <div class="bg-dark text-light">
+                <nav class="navbar navbar-light p-4">
+                    <div class="container-fluid row align-items-center justify-content-md-start justify-content-center">
+                        <div class="col-10 col-md-3">
+                            <a class="navbar-brand text-light " href="# "><img src="img/logo-bookmark-white.svg " alt="bookmark logo " id="logo " width="148 " height="25 " /></a>
+                        </div>
+                        <ul class="list-unstyled col-10 col-md-7 row align-self-md-start m-2 m-md-0">
+                            <li class="col-10 col-md-auto mx-auto m-md-0"><a class="nav-link text-light" href="#">Features</a></li>
+                            <li class="col-10 col-md-auto mx-auto m-md-0"><a class="nav-link text-light" href="#">Pricing</a></li>
+                            <li class="col-10 col-md-auto mx-auto m-md-0"><a class="nav-link text-light" href="#">Contact</a></li>
+                        </ul>
+                        <div class="col-10 col-md-2">
+                            <a class="m-2 " href="# "><img src="img/icon-facebook.svg " alt="facebook logo "></img>
+                            </a>
+                            <a class="m-2 " href="# "><img src="img/icon-twitter.svg " alt="twitter logo "></img>
+                            </a>
+                        </div>
+                    </div>
+
+                </nav>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js " integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js " integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13 " crossorigin="anonymous "></script>
 </body>
 
 </html>
