--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -312,7 +312,7 @@
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="col-auto">
-                        <button type="submit" class="btn btn-secondary text-light mt-3 mt-sm-0">Contact Us</button>
+                        <button type="submit" class="btn btn-secondary text-light">Contact Us</button>
                     </div>
                 </form>
             </div>
@@ -328,9 +328,11 @@
                             <li class="col-10 col-md-auto mx-auto m-md-0"><a class="nav-link text-light" href="#">Contact</a></li>
                         </ul>
                         <div class="col-10 col-md-2">
-                            <a class="m-2 " href="# "><img src="img/icon-facebook.svg " alt="facebook logo "></img>
+                            <a class="m-2" href="# ">
+                                <img src="img/icon-facebook.svg " alt="facebook logo" class="social"></img>
                             </a>
-                            <a class="m-2 " href="# "><img src="img/icon-twitter.svg " alt="twitter logo "></img>
+                            <a class="m-2" href="# ">
+                                <img src="img/icon-twitter.svg " alt="twitter logo" class="social"></img>
                             </a>
                         </div>
                     </div>
