--- a/Sprint 2/index.html
+++ b/Sprint 2/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="sass/main.css" media="all" rel="Stylesheet" type="text/css" />
     <link href="css/main.css" media="all" rel="Stylesheet" type="text/css" />
+    <!--<link href="css/main.css" media="all" rel="Stylesheet" type="text/css" />-->
     <link href="css/estils.css" media="all" rel="Stylesheet" type="text/css" />
     <title>Sprint 2</title>
 </head>
@@ -188,9 +188,9 @@
         </section>
         <!--Cards-->
         <div class="container">
-            <section class="row text-center justify-content-center" style="min-height:450px">
+            <section class="row text-center justify-content-center" style="min-height:450px" id="cards">
                 <!--Card 1 Google Chrome-->
-                <div class="card p-0 col-4 mx-3 align-self-start my-3 shadow" style="width: 16rem">
+                <div class="card p-0 col-4 mx-3 my-3 shadow" style="width: 16rem">
                     <div class="w-50 mx-auto p-3">
                         <img class="card-img-top pt-4" src="img/logo-chrome.svg" alt="logo google chrome" />
                     </div>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <!--Card 2 Mozilla Firefox-->
-                <div class="card p-0 col-4 mx-3 align-self-center my-3 shadow" style="width: 16rem">
+                <div class="card p-0 col-4 mx-3 my-3 shadow" style="width: 16rem">
                     <div class="w-50 mx-auto p-3">
                         <img class="card-img-top pt-4" src="img/logo-firefox.svg" alt="logo google chrome" />
                     </div>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <!--Card 2 Opera-->
-                <div class="card p-0 col-4 mx-3 align-self-end my-3 shadow" style="width: 16rem">
+                <div class="card p-0 col-4 mx-3 my-3 shadow" style="width: 16rem">
                     <div class="w-50 mx-auto p-3">
                         <img class="card-img-top pt-4" src="img/logo-opera.svg" alt="logo google chrome" />
                     </div>
