--- a/Sprint 3/checkout.html
+++ b/Sprint 3/checkout.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/checkout.css">
     <title>Checkout Page</title>
@@ -48,33 +46,35 @@
             <div class="col-sm-6">
                 <div class="mt-3 row">
                     <h5 class="my-auto">First Name :</h5>
-                    <input class="ml-3 name input rounded p-2" type="text" placeholder="First Name" />
-                    <p id="errorName">Numbers in the name are not valid</p>
+                    <input class="ml-3 firstName input rounded p-2" type="text" placeholder="First Name" id="firstName" required />
+                    <p id="errorName">Enter a valid First Name.</p>
                 </div>
                 <div class="mt-3 row ">
                     <h5 class="my-auto">Email :</h5>
-                    <input class="ml-3 input rounded p-2" type="email" placeholder="Email" />
+                    <input class="ml-3 input email rounded p-2" type="email" placeholder="Email" id="email" required />
+                    <p id="errorEmail">Enter a valid Email.</p>
                 </div>
                 <div class="mt-3 row ">
                     <h5 class="my-auto">Address :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Address" />
+                    <input class="ml-3 input address rounded p-2" type="text" placeholder="Address" id="address" required />
+                    <p id="errorAddress">Enter a valid Address.</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mt-3 row">
                     <h5 class="my-auto name my-auto">Last Name :</h5>
-                    <input class="ml-3 input rounded p-2" type="text" placeholder="Last Name" />
+                    <input class="ml-3 input lastName rounded p-2" type="text" placeholder="Last Name" id="lastName" required />
+                    <p id="errorLastName">Enter a valid Last Name.</p>
                 </div>
                 <div class="mt-3 row">
                     <h5 class="my-auto my-auto">Password :</h5>
-                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4"
-                        maxlength="8" placeholder="Password" />
-                    <p id="errorPassword">Enter a correct password</p>
+                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password" id="password" required />
+                    <p id="errorPassword">Enter a correct password.</p>
                 </div>
                 <div class="mt-3 row">
                     <h5 class="my-auto my-auto">Phone Number :</h5>
-                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." />
-                    <p id="errorPhone">Invalid phone number!!</p>
+                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." id="phone" required />
+                    <p id="errorPhone">Enter a valid phone number.</p>
                 </div>
             </div>
         </div>
