--- a/Sprint 3/shop.html
+++ b/Sprint 3/shop.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white btn" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onclick="cart()" href="#beauty"><i class="fas fa-cart-arrow-down"></i>
+                    <a class="nav-link text-white btn" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onclick="printCart()" href="#beauty"><i class="fas fa-cart-arrow-down"></i>
             My Cart</a>
                 </li>
             </ul>
@@ -153,8 +153,7 @@
                     <div class="modal-body">
                         <!-- listing items starts -->
                         <div>
-                            <ul class="list">
-
+                            <ul class="list" id="showCart" style='list-style-type: none'>
                             </ul>
                             <div>
                                 <h3 class="text-center bill px-5">Select Something</h3>
