--- a/Sprint 5/typescript-project/src/index.html
+++ b/Sprint 5/typescript-project/src/index.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Sprint 5 IT ACADEMY</h1>
     <button type="button" onclick="callAPI()">Següent acudit</button>
-    <script src="index.js"></script>
+    <script src="../dist/index.js"></script>
 </body>
 
 </html>
