--- a/Sprint 5/typescript-project/src/index.html
+++ b/Sprint 5/typescript-project/src/index.html
@@ -3,14 +3,47 @@
   <header>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- bootstrap -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.css"
+    />
   </header>
   <body>
     <div class="container-fluid p-5 row m-auto mt-5 text-center">
-        <div class="bg-white p-5 m-auto col-7 row shadow rounded height">
+      <div class="bg-white p-5 m-auto col-7 row shadow rounded height">
         <h1 class="m-auto w-auto col-8">Preparat per ruire?</h1>
         <p class="m-auto my-4 col-11 lead" id="jokeText"></p>
-        <button class="btn btn-primary btn-lg m-auto my-4 col-auto" type="button" onclick="callAPI()">Següent acudit</button></div>
+        <div>
+          <button
+            class="btn btn-outline-success col-auto mx-2"
+            type="button"
+            onclick="scoreJokes(1)"
+          >
+            Score: 1
+          </button>
+          <button
+            class="btn btn-outline-success col-auto mx-2"
+            type="button"
+            onclick="scoreJokes(2)"
+          >
+            Score: 2
+          </button>
+          <button
+            class="btn btn-outline-success col-auto mx-2"
+            type="button"
+            onclick="scoreJokes(3)"
+          >
+            Score: 3
+          </button>
+        </div>
+        <button
+          class="btn btn-primary btn-lg m-auto my-4 col-auto"
+          type="button"
+          onclick="callAPI()"
+        >
+          Següent acudit
+        </button>
+      </div>
     </div>
     <script src="../dist/index.js"></script>
     <script src="../node_modules/@popperjs/core/dist/cjs/popper.js"></script>
