--- a/Sprint 5/typescript-project/src/index.html
+++ b/Sprint 5/typescript-project/src/index.html
@@ -9,6 +9,11 @@
     />
   </header>
   <body>
+    <!-- navbar -->
+    <nav class="navbar sticky-top bg-light justify-content-start p-3">
+    <h3 class="m-1">Barcelona Weather:</h3><h3 class="m-1" id="weather"></h3>
+  </nav>
+  <!-- Jokes Section -->
     <div class="container-fluid p-5 row m-auto mt-5 text-center">
       <div class="bg-white p-5 m-auto col-7 row shadow rounded height">
         <h1 class="m-auto w-auto col-8">Preparat per ruire?</h1>
