--- a/Sprint 5/typescript-project/src/index.html
+++ b/Sprint 5/typescript-project/src/index.html
@@ -44,7 +44,7 @@
         <button
           class="btn btn-primary btn-lg m-auto my-4 col-auto"
           type="button"
-          onclick="callAPI()"
+          onclick="getRandomJoke(1,3)"
         >
           Següent acudit
         </button>
